force-app/main/default/objects/Budget_Lock__c/Budget_Lock__c.object-meta.xml
<CustomObject>
    <description>Defines a budget lock at a configurable scope level (Global, Market, Region, Office, Account, Category). When an active lock exists that covers a given Account+Category+Year combination, the aeProjectionGrid rejects edits for that scope.</description>
    <label>Budget Lock</label>
    <nameField>
        <displayFormat>LOCK-{0000}</displayFormat>
        <label>Lock Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Budget Locks</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>