force-app/main/default/objects/Budget_Lock__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Budget Locks</relationshipLabel>
    <relationshipName>Budget_Locks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>