force-app/main/default/objects/Budget_Lock__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipLabel>Budget Locks</relationshipLabel>
    <relationshipName>Budget_Locks</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <type>Lookup</type>
</CustomField>