force-app/main/default/objects/Budget_Lock__c/fields/Lock_Message__c.field-meta.xml
<CustomField>
    <fullName>Lock_Message__c</fullName>
    <label>Lock Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>