force-app/main/default/objects/Budget_Lock__c/fields/Locked_By__c.field-meta.xml
<CustomField>
    <fullName>Locked_By__c</fullName>
    <label>Locked By</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Budget Locks Created</relationshipLabel>
    <relationshipName>Budget_Locks_Created</relationshipName>
    <type>Lookup</type>
</CustomField>