force-app/main/default/objects/Budget_Lock__c/fields/Locked_Date__c.field-meta.xml
<CustomField>
    <fullName>Locked_Date__c</fullName>
    <label>Locked Date</label>
    <type>Date</type>
</CustomField>