force-app/main/default/objects/Budget_Lock__c/fields/Office__c.field-meta.xml
<CustomField>
    <fullName>Office__c</fullName>
    <label>Office</label>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Budget Locks</relationshipLabel>
    <relationshipName>Budget_Locks</relationshipName>
    <type>Lookup</type>
</CustomField>